[gd_scene load_steps=4 format=3 uid="uid://b20wicfbapf1f"]

[ext_resource type="Script" path="res://show_spectrum.gd" id="1"]
[ext_resource type="Script" path="res://show_spectrum_draw_parts.gd" id="3"]
[ext_resource type="AudioStream" uid="uid://bu0t44p5tn0ul" path="res://files/cv02_1-10.wav" id="3_lhb0u"]

[node name="ShowSpectrum" type="Node2D"]
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Stop" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Stop"

[node name="Fps" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "fps:000"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("3")

[node name="Player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_lhb0u")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Stop" to="." method="_on_Stop_pressed"]
[connection signal="finished" from="Player" to="." method="_on_player_finished"]
